# DRF-Image-upload

./: .env  .gitignore  Makefile  README.md  pyproject.toml  run_initial_commands.sh
.github/workflows/: backend_tests.yml
deployment/local/: Dockerfile.worker  docker-compose.yml
deployment/prod/: docker-compose.yml
docs/: docs.md
docs/ADR/: why-redis.md  why_github.md  why_poetry.MD  workflow-model.md
docs/c4-diagrams/: context_diagram.md
docs/workflow/: day1.md  how_i_work.md
recruitment_task/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
rest_api/: admin.py  models.py  signals.py  tasks.py  urls.py
rest_api/management/commands/: check_db.py  check_or_create_user.py  clean_up.py
rest_api/serializers/: image.py  tier.py
rest_api/tests/: test_api.py  test_models.py
rest_api/views/: image.py  tier.py
